add sidebar content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <div class="sidebar-item">
+                <div class="logo"></div>
+                <div class="namme">Dashboard</div>
+            </div>
+            <div class="sidebar-item">
+                <div class="locations">Home</div>
+                <div class="locations">Profile</div>
+                <div class="locations">Messages</div>
+                <div class="locations">History</div>
+                <div class="locations">Tasks</div>
+                <div class="locations">Communities</div>
+            </div>
+            <div class="sidebar-item"></div>
+        </div>
+        <div class="header"></div>
+        <div class="content">   </div>
+    </div>
 </body>
 </html>
