--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Admin Dashboard</title>
 </head>
+
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="sidebar-item">
-                <div class="logo"></div>
-                <div class="namme">Dashboard</div>
+            <div class="nav-header">
+                <img src="./dashboard-resources/all-inclusive-box-outline.svg" class="header-logo">
+                <div class="nav-heading"></div>
             </div>
-            <div class="sidebar-item">
-                <div class="locations">Home</div>
-                <div class="locations">Profile</div>
-                <div class="locations">Messages</div>
-                <div class="locations">History</div>
-                <div class="locations">Tasks</div>
-                <div class="locations">Communities</div>
-            </div>
-            <div class="sidebar-item"></div>
         </div>
         <div class="header"></div>
-        <div class="content">   </div>
+        <div class="content"> </div>
     </div>
 </body>
+
 </html>
