--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
                 <img src="./dashboard-resources/all-inclusive-box-outline.svg" class="header-logo">
                 <div class="nav-heading"></div>
             </div>
+            <ul class="user-items">
+                <li class="nav-items">Home</li>
+                <li class="nav-items">Profile</li>
+                <li class="nav-items">Messages</li>
+                <li class="nav-items">History</li>
+                <li class="nav-items">Tasks</li>
+                <li class="nav-items">Communities</li>
+            </ul>
+            <ul class="user-items">
+                <li class="nav-items">Settings</li>
+                <li class="nav-items">Support</li>
+                <li class="nav-items">Privacy</li>
+            </ul>
         </div>
         <div class="header"></div>
         <div class="content"> </div>
