add basic elements for upper header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
                 <li class="nav-items">Privacy</li>
             </ul>
         </div>
-        <div class="header"></div>
+        <div class="header">
+            <div class="header-top">
+                <div class="header-top-left">
+                    <img src="./dashboard-resources/magnify.svg" alt="search icon" class="search">
+                    <input type="text" placeholder="Search..." id="searchbar">
+                </div>
+                <div class="header-top-right">
+                    <img src="./dashboard-resources/bell-ring-outline.svg" alt="notifications icon" class="notifs">
+                    <div class="user-icon"></div>
+                    <div class="user-name">User Name</div>
+                </div>
+            </div>
+            <div class="header-bottom"></div>
+        </div>
         <div class="content"> </div>
     </div>
 </body>
