--- a/index.html
+++ b/index.html
@@ -38,13 +38,28 @@
                 </div>
                 <div class="header-top-right">
                     <img src="./dashboard-resources/bell-ring-outline.svg" alt="notifications icon" class="notifs">
-                    <div class="user-icon"></div>
-                    <div class="user-name">User Name</div>
+                    <img src="./dashboard-resources/account-box.svg" class="user-icon"></img>
+                    <div class="user-name">Cassandra Penders</div>
                 </div>
             </div>
-            <div class="header-bottom"></div>
+            <div class="header-bottom">
+                <div class="header-bottom-left">
+                    <img src="./dashboard-resources/account-box.svg" alt="User Icon" class="user-icon-main">
+                    <div class="welcome">
+                        <div class="greeting">Hi there,</div>
+                        <div class="name-details">Cassandra(@undead-alexandra)</div>
+                    </div>
+                </div>
+                <div class="header-bottom-right">
+                    <button class="header-btn">New</button>
+                    <button class="header-btn">Upload</button>
+                    <button class="header-btn">Share</button>
+                </div>
+            </div>
         </div>
-        <div class="content"> </div>
+        <div class="content">
+
+        </div>
     </div>
 </body>
 
