add nav-bar heading

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="sidebar">
             <div class="nav-header">
                 <img src="./dashboard-resources/all-inclusive-box-outline.svg" class="header-logo">
-                <div class="nav-heading"></div>
+                <div class="nav-heading">Navigation</div>
             </div>
             <ul class="user-items">
                 <li class="nav-items">Home</li>
