populate main content element

--- a/index.html
+++ b/index.html
@@ -58,7 +58,132 @@
             </div>
         </div>
         <div class="content">
-
+            <div class="projects">
+                <h2 class="projects-header">Your Projects</h2>
+                <div class="projects-container">
+                    <div class="project-grid-element">
+                        <div class="project-text">
+                            <h3 class="project-heading">Super Cool Project</h3>
+                            <div class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="project-icons">
+                            <img src="./dashboard-resources/star-plus-outline.svg" alt="star" class="project-icons">
+                            <img src="./dashboard-resources/eye-plus-outline.svg" alt="eye" class="project-icons">
+                            <img src="./dashboard-resources/source-fork.svg" alt="fork" class="project-icons">
+                        </div>
+                    </div>
+                    <div class="project-grid-element">
+                        <div class="project-text">
+                            <h3 class="project-heading">Super Cool Project</h3>
+                            <div class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="project-icons">
+                            <img src="./dashboard-resources/star-plus-outline.svg" alt="star" class="project-icons">
+                            <img src="./dashboard-resources/eye-plus-outline.svg" alt="eye" class="project-icons">
+                            <img src="./dashboard-resources/source-fork.svg" alt="fork" class="project-icons">
+                        </div>
+                    </div>
+                    <div class="project-grid-element">
+                        <div class="project-text">
+                            <h3 class="project-heading">Super Cool Project</h3>
+                            <div class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="project-icons">
+                            <img src="./dashboard-resources/star-plus-outline.svg" alt="star" class="project-icons">
+                            <img src="./dashboard-resources/eye-plus-outline.svg" alt="eye" class="project-icons">
+                            <img src="./dashboard-resources/source-fork.svg" alt="fork" class="project-icons">
+                        </div>
+                    </div>
+                    <div class="project-grid-element">
+                        <div class="project-text">
+                            <h3 class="project-heading">Super Cool Project</h3>
+                            <div class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="project-icons">
+                            <img src="./dashboard-resources/star-plus-outline.svg" alt="star" class="project-icons">
+                            <img src="./dashboard-resources/eye-plus-outline.svg" alt="eye" class="project-icons">
+                            <img src="./dashboard-resources/source-fork.svg" alt="fork" class="project-icons">
+                        </div>
+                    </div>
+                    <div class="project-grid-element">
+                        <div class="project-text">
+                            <h3 class="project-heading">Super Cool Project</h3>
+                            <div class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="project-icons">
+                            <img src="./dashboard-resources/star-plus-outline.svg" alt="star" class="project-icons">
+                            <img src="./dashboard-resources/eye-plus-outline.svg" alt="eye" class="project-icons">
+                            <img src="./dashboard-resources/source-fork.svg" alt="fork" class="project-icons">
+                        </div>
+                    </div>
+                    <div class="project-grid-element">
+                        <div class="project-text">
+                            <h3 class="project-heading">Super Cool Project</h3>
+                            <div class="project-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+                        </div>
+                        <div class="project-icons">
+                            <img src="./dashboard-resources/star-plus-outline.svg" alt="star" class="project-icons">
+                            <img src="./dashboard-resources/eye-plus-outline.svg" alt="eye" class="project-icons">
+                            <img src="./dashboard-resources/source-fork.svg" alt="fork" class="project-icons">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <h2 class="announcement-header">Announcements</h2>
+                <div class="anouncements-container">
+                    <div class="announcement-heading">Site Maintenance</div>
+                    <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div class="announcement-bar"></div>
+                    <div class="announcement-heading">Community Share Day</div>
+                    <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                    <div class="announcement-bar"></div>
+                    <div class="announcement-heading">Updated Privacy Policy</div>
+                    <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                </div>
+            </div>
+            <div class="trending">
+                <h2 class="trending-header">Trending</h2>
+                <div class="trending-container">
+                    <div class="trending-profile">
+                        <img src="./dashboard-resources/account-box.svg" alt="trending account image" class="trending-icon">
+                        <div class="trending-account-details">
+                            <div class="trending-acct-tag">@account-name</div>
+                            <div class="trending-acct-name">Real Person the Real Person</div>
+                        </div>
+                    </div>
+                    <div class="trending-profile">
+                        <img src="./dashboard-resources/account-box.svg" alt="trending account image" class="trending-icon">
+                        <div class="trending-account-details">
+                            <div class="trending-acct-tag">@account-name</div>
+                            <div class="trending-acct-name">Real Person the Real Person</div>
+                        </div>
+                    </div>
+                    <div class="trending-profile">
+                        <img src="./dashboard-resources/account-box.svg" alt="trending account image" class="trending-icon">
+                        <div class="trending-account-details">
+                            <div class="trending-acct-tag">@account-name</div>
+                            <div class="trending-acct-name">Real Person the Real Person</div>
+                        </div>
+                    </div>
+                    <div class="trending-profile">
+                        <img src="./dashboard-resources/account-box.svg" alt="trending account image" class="trending-icon">
+                        <div class="trending-account-details">
+                            <div class="trending-acct-tag">@account-name</div>
+                            <div class="trending-acct-name">Real Person the Real Person</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
